data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2363.wast
;; 4. **Invalid Operand Stack Operations**:    - **Test Description**: Implement a block where operations within the block incorrectly consume or produce stack values against the block type expectations.    - **Reasoning**: This checks stack behavior within blocks to ensure blocks are consuming and producing values as per type constraints.    - **Constraint checked**: Operand Stack Behavior    - **Relation to CFG**: Ensures correct stack state transitions within the CFG, avoiding stack underflows or overflows.

(assert_invalid
  (module (func $invalid-stack-operation
    (block (result i32) (i32.const 1) (i32.const 2) (i32.add) (i64.const 3)) 
  ))
  "type mismatch"
)